<resources>
    <string name="app_name">Spa Lotus</string>
    <string name="textview">TextView</string>
    <string name="login">Login</string>
    <string name="email">E-mail</string>
    <string name="password">Senha</string>
    <string name="recuperar_senha">Recuperar Senha</string>
    <string name="make_login">Fazer Login</string>
    <string name="make_order">Fazer Pedido</string>
    <string name="create_an_account">Criar Conta</string>
    <string name="registration">Cadastro</string>
    <string name="create_my_account">Criar minha conta</string>
    <string name="full_name">Nome Completo</string>
    <string name="cpf">CPF</string>
    <string name="register">Cadastrar</string>
    <string name="home">Home</string>
    <string name="make_your_reservation">Reserva</string>
    <string name="our_packages">Pacotes</string>
    <string name="our_products">Loja</string>
    <string name="your_products">Seus produtos</string>
    <string name="meet_uss">Conheça-nos</string>
    <string name="any_opinions">Algumas Opiniões</string>
    <string name="settings_account">Sua conta</string>
    <string name="sex">Gênero</string>
    <string name="masculine">Masculino</string>
    <string name="feminine">Feminino</string>
    <string name="telephone">Telefone</string>
    <string name="birthdate">Data de Nascimento</string>
    <string name="first_scheduling">O primeiro<br /> agendamento tem<br /> 25% de desconto</string>
    <string name="schedule_a_time">Agende um horário</string>
    <string name="mytelephone">Telefone (12) 3456-7890</string>
    <string name="myemail">E-mail lotusspa@gmail.com</string>
    <string name="online_reservation">Reservas On-line</string>
    <string name="myaddress">Endereço Rua Augusta, 929 - São Paulo, SP</string>
    <string name="product">Product</string>
    <string name="todo">TODO</string>
    <string name="cep">Cep</string>
    <string name="numberaddress">Numero Endereço</string>
    <string name="logout">Encerrar Sessão</string>
    <string name="update">Atualizar Dados</string>
    <string name="ok">Ok</string>
    <string name="cancel">cancel</string>
    <string name="prodname">Nome</string>
    <string name="prodprice">Preço</string>
    <string name="catname">Categoria</string>
    <string name="amount">Quantidade</string>
    <string name="add_prod">Adicionar Produto</string>
    <string name="delete">DELETE</string>
    <string name="end_order">Finalizar Pedido</string>
    <string name="delivery_address">Endereço de Entrega</string>
    <string name="add_package">Comprar Serviço</string>
    <string name="description">Descrição</string>
    <string name="date_reserve">Validade da Reserva</string>
    <string name="make_reserve">Realizar Reserva</string>
    <string name="title_activity_places">Map</string>
    <string name="find_place">Procure o estabelecimento<br /> mais perto</string>
    <string name="your_api_key">AIzaSyCIt8fjGEw241jz1wQWa2Fbzi1qsf8-rkk</string>
    <string name="products">Produtos</string>
    <string name="details_product">Detalhes do Produto</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="preco">Preço</string>
    <string name="validity">Validade</string>
    <string name="option_payment">Opção Pagamento</string>
    <string name="date_make_order">Data Pedido</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>
</resources>