<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="0"
        android:title="@string/settings_account"
        app:showAsAction="never" />
    <item android:title="@string/make_your_reservation"
        android:id="@+id/make_your_reservation_menu"
        android:orderInCategory="2"
        app:showAsAction="never"/>
    <item android:title="@string/our_packages"
        android:id="@+id/our_packages_menu"
        android:orderInCategory="3"
        app:showAsAction="never"/>
    <item android:title="@string/our_products"
        android:id="@+id/our_products_menu"
        android:orderInCategory="4"
        app:showAsAction="never"/>
    <item android:title="@string/meet_uss"
        android:id="@+id/meet_uss_menu"
        android:orderInCategory="5"
        app:showAsAction="never"/>
</menu>